--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,4 +49,7 @@
 		<servlet-name>testdemo</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>/test</welcome-file>
+	</welcome-file-list>
 </web-app>
